Add doc Fix getCreateSQL to return the keyword AUTOCOMMIT only when the user set it to OFF.

--- a/h2/src/docsrc/html/changelog.html
+++ b/h2/src/docsrc/html/changelog.html
@@ -21,6 +21,7 @@ Change Log
 
 <h2>Next Version (unreleased)</h2>
 <ul>
+<li>Issue #3174: Add keyword AUTOCOMMIT on create linked table to control the commit mode
 <li>Issue #3130: Precision of NUMERIC values isn't verified in the Oracle compatibility mode
 </li>
 <li>Issue #3122: Documentation: Syntax diagram for RENAME CONSTRAINT incorrect
