--- a/h2/src/docsrc/html/cheatSheet.html
+++ b/h2/src/docsrc/html/cheatSheet.html
@@ -113,8 +113,8 @@ li {
     <a href="license.html">free to use and distribute</a>.
 </li><li><a href="https://h2database.com/html/download.html">Download</a>:
     <a href="https://repo1.maven.org/maven2/com/h2database/h2/${version}/h2-${version}.jar" class="link">jar</a>,
-    <a href="https://h2database.com/h2-setup-${versionDate}.exe" class="link">installer (Windows)</a>,
-    <a href="https://h2database.com/h2-${versionDate}.zip" class="link">zip</a>.
+    <a href="https://${downloadRoot}/h2-setup-${versionDate}.exe" class="link">installer (Windows)</a>,
+    <a href="https://${downloadRoot}/h2-${versionDate}.zip" class="link">zip</a>.
 </li><li>To start the
     <a href="quickstart.html#h2_console">H2 Console tool</a>, double click the jar file, or
     run <code>java -jar h2*.jar</code>, <code>h2.bat</code>, or <code>h2.sh</code>.
