--- a/h2/src/docsrc/html/download.html
+++ b/h2/src/docsrc/html/download.html
@@ -21,16 +21,16 @@ Downloads
 
 <h3>Version ${version} (${versionDate})</h3>
 <p>
-<a href="https://h2database.com/h2-setup-${versionDate}.exe">Windows Installer</a>
+<a href="https://${downloadRoot}/h2-setup-${versionDate}.exe">Windows Installer</a>
 <!-- sha1Exe --><br />
-<a href="https://h2database.com/h2-${versionDate}.zip">Platform-Independent Zip</a>
+<a href="https://${downloadRoot}/h2-${versionDate}.zip">Platform-Independent Zip</a>
 <!-- sha1Zip --><br />
 </p>
 
 <h3>Version ${stableVersion} (${stableVersionDate}), Last Stable</h3>
 <p>
-<a href="https://h2database.com/h2-setup-${stableVersionDate}.exe">Windows Installer</a><br />
-<a href="https://h2database.com/h2-${stableVersionDate}.zip">Platform-Independent Zip</a><br />
+<a href="https://${downloadRoot}/h2-setup-${stableVersionDate}.exe">Windows Installer</a><br />
+<a href="https://${downloadRoot}/h2-${stableVersionDate}.zip">Platform-Independent Zip</a><br />
 </p>
 
 <h3>Archive Downloads</h3>
