--- a/h2/src/docsrc/html/fragments.html
+++ b/h2/src/docsrc/html/fragments.html
@@ -71,7 +71,7 @@ translate -->
 <a href="installation.html">Installation</a><br />
 <a href="tutorial.html">Tutorial</a><br />
 <a href="features.html">Features</a><br />
-<a href="security.html">Features</a><br />
+<a href="security.html">Security</a><br />
 <a href="performance.html">Performance</a><br />
 <a href="advanced.html">Advanced</a><br />
 <br />
