--- a/h2/src/docsrc/html/mainWeb.html
+++ b/h2/src/docsrc/html/mainWeb.html
@@ -40,14 +40,14 @@ Welcome to H2, the Java SQL database. The main features of H2 are:
                 Version ${version} (${versionDate})
             </td></tr>
             <tr><td style="border: 0px; background-color: #eee;">
-                <a href="https://h2database.com/h2-setup-${versionDate}.exe"><img src="images/download-2.png" alt="Download this database" width="22" height="22"/></a>
+                <a href="https://${downloadRoot}/h2-setup-${versionDate}.exe"><img src="images/download-2.png" alt="Download this database" width="22" height="22"/></a>
             </td><td style="vertical-align: middle; border: 0px; background-color: #eee;">
-                <a href="https://h2database.com/h2-setup-${versionDate}.exe">Windows Installer (5 MB)</a>
+                <a href="https://${downloadRoot}/h2-setup-${versionDate}.exe">Windows Installer (6.7 MB)</a>
             </td></tr>
             <tr><td style="border: 0px; background-color: #eee;">
-                <a href="https://h2database.com/h2-${versionDate}.zip"><img src="images/download-2.png" alt="Download this database" width="22" height="22"/></a>
+                <a href="https://${downloadRoot}/h2-${versionDate}.zip"><img src="images/download-2.png" alt="Download this database" width="22" height="22"/></a>
             </td><td style="vertical-align: middle; border: 0px; background-color: #eee;">
-                <a href="https://h2database.com/h2-${versionDate}.zip">All Platforms (zip, 8 MB)</a>
+                <a href="https://${downloadRoot}/h2-${versionDate}.zip">All Platforms (zip, 9.5 MB)</a>
             </td></tr>
             <tr><td style="border: 0px; background-color: #eee;" colspan="2">
                 <a href="download.html">All Downloads</a>
