change release date

--- a/h2/src/docsrc/html/changelog.html
+++ b/h2/src/docsrc/html/changelog.html
@@ -25,8 +25,10 @@ Change Log
 </li>
 </ul>
 
-<h2>Version 2.0.202 (2021-11-23)</h2>
+<h2>Version 2.0.202 (2021-11-25)</h2>
 <ul>
+<li>Issue #3206: CVE Vulnerability CVE-2018-14335
+</li>
 <li>Issue #3174: Add keyword AUTOCOMMIT on create linked table to control the commit mode
 </li>
 <li>Issue #3130: Precision of NUMERIC values isn't verified in the Oracle compatibility mode
