fix link to changelog

--- a/h2/src/docsrc/html/history.html
+++ b/h2/src/docsrc/html/history.html
@@ -29,10 +29,8 @@ History
 
 <h2 id="changelog">Change Log</h2>
 <p>
-The up-to-date change log is available at
-<a href="https://h2database.com/html/changelog.html">
-https://h2database.com/html/changelog.html
-</a>
+The up-to-date change log is available
+<a href="changelog.html">here</a>
 </p>
 
 <h2 id="history">History of this Database Engine</h2>
