--- a/h2/src/docsrc/html/changelog.html
+++ b/h2/src/docsrc/html/changelog.html
@@ -21,7 +21,7 @@ Change Log
 
 <h2>Next Version (unreleased)</h2>
 <ul>
-<li>Nothing yet...
+<li>Issue #3186: ResultSetMetaData.getSchemaName() returns empty string for aliased columns
 </li>
 </ul>
 
