--- a/h2/src/docsrc/html/changelog.html
+++ b/h2/src/docsrc/html/changelog.html
@@ -21,6 +21,8 @@ Change Log
 
 <h2>Next Version (unreleased)</h2>
 <ul>
+<li>Issue #3221: NullPointerException when creating domain
+</li>
 <li>Issue #3186: ResultSetMetaData.getSchemaName() returns empty string for aliased columns
 </li>
 </ul>
