Fix some issues in documentation

--- a/h2/src/docsrc/html/build.html
+++ b/h2/src/docsrc/html/build.html
@@ -200,7 +200,7 @@ If you'd like to contribute bug fixes or new features, please consider the follo
 </li><li>Verify that you did not break other features: run the test cases by executing
     <code>build test</code>.
 </li><li>Provide end user documentation if required (<code>src/docsrc/html/*</code>).
-</li><li>Document grammar changes in <code>src/docsrc/help/help.csv</code>
+</li><li>Document grammar changes in <code>src/main/org/h2/res/help.csv</code>
 </li><li>Provide a change log entry (<code>src/docsrc/html/changelog.html</code>).
 </li><li>Verify the spelling using <code>build spellcheck</code>. If required
     add the new words to <code>src/tools/org/h2/build/doc/dictionary.txt</code>.
