--- a/h2/src/docsrc/html/changelog.html
+++ b/h2/src/docsrc/html/changelog.html
@@ -21,6 +21,8 @@ Change Log
 
 <h2>Next Version (unreleased)</h2>
 <ul>
+<li>Issue #3233: General error when using NULL predicate on _ROWID_ column
+</li>
 <li>Issue #3223: TRUNC(v, p) with negative precisions no longer works
 </li>
 <li>Issue #3221: NullPointerException when creating domain
