correct table type in published example

--- a/h2/src/docsrc/html/features.html
+++ b/h2/src/docsrc/html/features.html
@@ -1157,7 +1157,7 @@ Java source code is generated as well. This simplifies reproducing problems. The
 12-20 20:58:09 jdbc[0]:
 /**/dbMeta3.getURL();
 12-20 20:58:09 jdbc[0]:
-/**/dbMeta3.getTables(null, "", null, new String[]{"TABLE", "VIEW"});
+/**/dbMeta3.getTables(null, "", null, new String[]{"BASE TABLE", "VIEW"});
 ...
 </pre>
 <p>
