Fix undocumented NOT IN () and disallow undocumented WHEN [ NOT ] IN ()

--- a/h2/src/docsrc/html/changelog.html
+++ b/h2/src/docsrc/html/changelog.html
@@ -21,6 +21,10 @@ Change Log
 
 <h2>Next Version (unreleased)</h2>
 <ul>
+<li>Issue #3235: Regression in IN predicate with empty in list
+</li>
+<li>Issue #3236: NullPointerException in DatabaseMetaData::getIndexInfo when querying the info for views
+</li>
 <li>Issue #3233: General error when using NULL predicate on _ROWID_ column
 </li>
 <li>Issue #3223: TRUNC(v, p) with negative precisions no longer works
