Add missing trim() in casts from character strings to BOOLEAN

--- a/h2/src/docsrc/html/changelog.html
+++ b/h2/src/docsrc/html/changelog.html
@@ -21,6 +21,8 @@ Change Log
 
 <h2>Next Version (unreleased)</h2>
 <ul>
+<li>Issue #3237: Can no longer cast CHAR(n) to BOOLEAN with n > 1
+</li>
 <li>Issue #3235: Regression in IN predicate with empty in list
 </li>
 <li>Issue #3236: NullPointerException in DatabaseMetaData::getIndexInfo when querying the info for views
