Encode non-BMP characters properly in PageParser.escapeHtml()

--- a/h2/src/docsrc/html/changelog.html
+++ b/h2/src/docsrc/html/changelog.html
@@ -21,6 +21,8 @@ Change Log
 
 <h2>Next Version (unreleased)</h2>
 <ul>
+<li>Issue #3204: H2 Tools Web Console: Unicode 32
+</li>
 <li>Issue #3227: Regression when referencing outer joined column from correlated subquery
 </li>
 <li>Issue #3237: Can no longer cast CHAR(n) to BOOLEAN with n > 1
