Properly return row with NULL values from subqueries with cardinality 0

--- a/h2/src/docsrc/html/changelog.html
+++ b/h2/src/docsrc/html/changelog.html
@@ -21,6 +21,12 @@ Change Log
 
 <h2>Next Version (unreleased)</h2>
 <ul>
+<li>Issue #3249: Multi-column assignment with subquery throws exception when subquery doesn't return any rows
+</li>
+<li>PR #3248: Remove redundant uniqueness check, correct version in pom
+</li>
+<li>PR #3247: Avoid AIOB exception in TestCrashAPI and in Transaction
+</li>
 <li>Issue #3241: ResultSetMetaData::getColumnTypeName should produce the correct ARRAY type
 </li>
 <li>Issue #3204: H2 Tools Web Console: Unicode 32
