--- a/h2/src/docsrc/html/changelog.html
+++ b/h2/src/docsrc/html/changelog.html
@@ -25,7 +25,7 @@ Change Log
 </li>
 <li>PR #3248: Remove redundant uniqueness check, correct version in pom
 </li>
-<li>PR #3247: Avoid AIOB exception in TestCrashAPI and in Transaction
+<li>PR #3247: Avoid AIOBE exception in TestCrashAPI and in Transaction
 </li>
 <li>Issue #3241: ResultSetMetaData::getColumnTypeName should produce the correct ARRAY type
 </li>
