Fix session-dependent comparisons in index conditions

--- a/h2/src/docsrc/html/changelog.html
+++ b/h2/src/docsrc/html/changelog.html
@@ -21,6 +21,12 @@ Change Log
 
 <h2>Next Version (unreleased)</h2>
 <ul>
+<li>Issue #3270: org.h2.jdbc.JdbcSQLFeatureNotSupportedException: Feature not supported: "Unsafe comparison or cast"
+</li>
+<li>Issue #3268 / PR #3275: Add TO_DATE and TO_TIMESTAMP to PostgreSQL compatibility mode
+</li>
+<li>PR #3274: Remove some dead code and unused params
+</li>
 <li>Issue #3266: Oracle compatibility NUMBER without precision and scale should have variable scale
 </li>
 <li>Issue #3263: Unable to store BigDecimal with negative scale in NUMERIC(19,6) column
