--- a/h2/src/docsrc/html/changelog.html
+++ b/h2/src/docsrc/html/changelog.html
@@ -21,6 +21,10 @@ Change Log
 
 <h2>Next Version (unreleased)</h2>
 <ul>
+<li>Issue #3251: Table with GEOMETRY column can't have a TriggerAdapter-based trigger any more
+</li>
+<li>PR #3281: DateTimeFormatter-based FORMATDATETIME and PARSEDATETIME and other changes
+</li>
 <li>Issue #3246: Spatial predicates with comparison are broken in MySQL compatibility mode
 </li>
 <li>Issue #3270: org.h2.jdbc.JdbcSQLFeatureNotSupportedException: Feature not supported: "Unsafe comparison or cast"
