--- a/h2/src/docsrc/html/changelog.html
+++ b/h2/src/docsrc/html/changelog.html
@@ -21,6 +21,8 @@ Change Log
 
 <h2>Next Version (unreleased)</h2>
 <ul>
+<li>PR #3284: Remove unused UNDO_LOG setting
+</li>
 <li>Issue #3251: Table with GEOMETRY column can't have a TriggerAdapter-based trigger any more
 </li>
 <li>PR #3281: DateTimeFormatter-based FORMATDATETIME and PARSEDATETIME and other changes
