Fix single-row subquery optimization once again

--- a/h2/src/docsrc/html/changelog.html
+++ b/h2/src/docsrc/html/changelog.html
@@ -21,6 +21,8 @@ Change Log
 
 <h2>Next Version (unreleased)</h2>
 <ul>
+<li>Issue #3287: SELECT statement works on 1.4.200 but fails on 2.0.202 with "Column XYZ must be in the GROUP BY list"
+</li>
 <li>PR #3284: Remove unused UNDO_LOG setting
 </li>
 <li>Issue #3251: Table with GEOMETRY column can't have a TriggerAdapter-based trigger any more
