--- a/h2/src/docsrc/html/changelog.html
+++ b/h2/src/docsrc/html/changelog.html
@@ -21,7 +21,11 @@ Change Log
 
 <h2>Next Version (unreleased)</h2>
 <ul>
-<li>Nothing yet...
+<li>Issue #3297: Unexpected GROUP BY results with indexed IGNORECASE column
+</li>
+<li>PR #3299: Remove useless StringBuilder.toString() call
+</li>
+<li>PR #3298: Delete unused sqlTypes array
 </li>
 </ul>
 
