--- a/h2/src/docsrc/html/features.html
+++ b/h2/src/docsrc/html/features.html
@@ -811,7 +811,7 @@ H2 supports case insensitive columns as well. To create the tables with case ins
 (example: <code>jdbc:h2:~/test;IGNORECASE=TRUE</code>).
 </p>
 
-<h3>Compatibility Modes</h3>
+<h3 id="compatibility_modes">Compatibility Modes</h3>
 <p>
 For certain features, this database can emulate the behavior of specific databases.
 However, only a small subset of the differences between databases are implemented in this way.
