Make LIMIT and MINUS mode-sensitive keywords and restrict MINUS to some modes

--- a/h2/src/docsrc/html/advanced.html
+++ b/h2/src/docsrc/html/advanced.html
@@ -571,13 +571,13 @@ The following tokens are keywords in H2:
 <tr><td>LIKE</td>
 <td>+</td><td>+</td><td>+</td><td>+</td><td>+</td><td>+</td><td>+</td></tr>
 <tr><td>LIMIT</td>
-<td>+</td><td></td><td></td><td></td><td></td><td>+</td><td></td></tr>
+<td>MS</td><td></td><td></td><td></td><td></td><td>+</td><td></td></tr>
 <tr><td>LOCALTIME</td>
 <td>+</td><td>+</td><td>+</td><td>+</td><td>+</td><td>+</td><td></td></tr>
 <tr><td>LOCALTIMESTAMP</td>
 <td>+</td><td>+</td><td>+</td><td>+</td><td>+</td><td>+</td><td></td></tr>
 <tr><td>MINUS</td>
-<td>+</td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+<td>MS</td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
 <tr><td>MINUTE</td>
 <td>+</td><td>+</td><td>+</td><td>+</td><td>+</td><td>+</td><td>+</td></tr>
 <tr><td>MONTH</td>
@@ -635,7 +635,7 @@ The following tokens are keywords in H2:
 <tr><td>TO</td>
 <td>+</td><td>+</td><td>+</td><td>+</td><td>+</td><td>+</td><td>+</td></tr>
 <tr><td>TOP</td>
-<td>CS</td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+<td>MS<br/>CS</td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
 <tr><td>TRAILING</td>
 <td>CS</td><td>+</td><td>+</td><td>+</td><td>+</td><td>+</td><td>+</td></tr>
 <tr><td>TRUE</td>
@@ -671,15 +671,30 @@ The following tokens are keywords in H2:
 </tbody>
 </table>
 <p>
-Some keywords in H2 are context-sensitive (CS), such keywords may be used as identifiers in some places,
+Mode-sensitive keywords (MS) are keywords only in some compatibility modes.
+</p>
+<ul><li>LIMIT is a keywords only in Regular, Legacy, DB2, HSQLDB, MariaDB, MySQL, and PostgreSQL compatibility modes.
+It is an identifier in Strict, Derby, MSSQLServer, and Oracle compatibility modes.
+</li><li>MINUS is a keyword only in Regular, Legacy, DB2, HSQLDB, and Oracle compatibility modes.
+It is an identifier in Strict, Derby, MSSQLServer, MariaDB, MySQL, and PostgreSQL compatibility modes.
+</li><li>TOP is a context-sensitive keyword (can be either keyword or identifier)
+only in Regular, Legacy, HSQLDB, and MSSQLServer compatibility modes.
+It is an identifier unconditionally in Strict, Derby, DB2, MariaDB, MySQL, Oracle, and PostgreSQL compatibility modes.
+</li></ul>
+<p>
+Context-sensitive keywords (CS) can be used as identifiers in some places,
 but cannot be used as identifiers in others.
+Normal keywords (+) are always treated as keywords.
+</p>
+<p>
 Most keywords in H2 are also reserved (+) or non-reserved (NR) words in the SQL Standard.
 Newer versions of H2 may have more keywords than older ones.
+Reserved words from the SQL Standard are potential candidates for keywords in future versions.
 </p>
 
 <p>There is a compatibility setting
 <a href="commands.html#set_non_keywords"><code>SET NON_KEYWORDS</code></a>
-that can be used as a temporary workaround for applications that use keywords as unquoted identifiers.</p>.
+that can be used as a temporary workaround for applications that use keywords as unquoted identifiers.</p>
 
 <h2 id="standards_compliance">Standards Compliance</h2>
 <p>
