--- a/h2/src/docsrc/html/advanced.html
+++ b/h2/src/docsrc/html/advanced.html
@@ -453,14 +453,17 @@ The following tokens are keywords in H2:
 <table class="main">
 <thead>
 <tr>
-<th>Keyword</th>
-<th>H2</th>
-<th>SQL:&#8203;2016</th>
-<th>SQL:&#8203;2011</th>
-<th>SQL:&#8203;2008</th>
-<th>SQL:&#8203;2003</th>
-<th>SQL:&#8203;1999</th>
-<th>SQL-92</th>
+<th rowspan="2">Keyword</th>
+<th rowspan="2">H2</th>
+<th colspan="6" style="text-align: center">SQL Standard</th>
+</tr>
+<tr>
+<th>2016</th>
+<th>2011</th>
+<th>2008</th>
+<th>2003</th>
+<th>1999</th>
+<th>92</th>
 </tr>
 </thead>
 <tbody>
