Remove custom doclet incompatible with Java 13+

--- a/h2/src/docsrc/html/changelog.html
+++ b/h2/src/docsrc/html/changelog.html
@@ -21,6 +21,10 @@ Change Log
 
 <h2>Next Version (unreleased)</h2>
 <ul>
+<li>Issue #1983: Official build script is not compatible with Java 13
+</li>
+<li>PR #3305: Add UNIQUE(VALUE) and remove some non-standard keywords
+</li>
 <li>Issue #3297: Unexpected GROUP BY results with indexed IGNORECASE column
 </li>
 <li>PR #3299: Remove useless StringBuilder.toString() call
