--- a/h2/src/docsrc/html/changelog.html
+++ b/h2/src/docsrc/html/changelog.html
@@ -21,6 +21,8 @@ Change Log
 
 <h2>Next Version (unreleased)</h2>
 <ul>
+<li>Issue #492: H2 does not correctly parse &lt;parenthesized joined table&gt;
+</li>
 <li>Issue #3311: Parser creates wrong join graph in some cases and uses wrong tables for column mapping
 </li>
 <li>FORCE_JOIN_ORDER setting is removed
