Fix detection of subqueries

--- a/h2/src/docsrc/html/changelog.html
+++ b/h2/src/docsrc/html/changelog.html
@@ -21,6 +21,14 @@ Change Log
 
 <h2>Next Version (unreleased)</h2>
 <ul>
+<li>Issue #918: Parser fails recognising set operations in correlated subqueries
+</li>
+<li>Issue #2050: PostgreSQL with recursive fail with union in the final query
+</li>
+<li>PR #3316: Update copyright years
+</li>
+<li>PR #3315: Never put read locks into lockSharedSessions and other minor changes
+</li>
 <li>Issue #492: H2 does not correctly parse &lt;parenthesized joined table&gt;
 </li>
 <li>Issue #3311: Parser creates wrong join graph in some cases and uses wrong tables for column mapping
