--- a/h2/src/docsrc/html/changelog.html
+++ b/h2/src/docsrc/html/changelog.html
@@ -19,9 +19,11 @@ Change Log
 
 <h1>Change Log</h1>
 
-<h2>Next Version (unreleased)</h2>
+<h2>Version 2.0.206 (unreleased)</h2>
 <ul>
-<li>Nothing yet...
+<li>Issue #3322: Create linked table fails when the table contains a Geometry with a data type specified
+</li>
+<li>Issue #3297: Unexpected GROUP BY results with indexed IGNORECASE column
 </li>
 </ul>
 
