--- a/h2/src/docsrc/html/download-archive.html
+++ b/h2/src/docsrc/html/download-archive.html
@@ -28,6 +28,14 @@ Archive Downloads
 
 <table>
 <tbody>
+<tr><td>2.0.206</td>
+<td><a href="https://github.com/h2database/h2database/releases/download/version-2.0.206/h2-setup-2022-01-04.exe">Windows Installer</a></td>
+<td><a href="https://github.com/h2database/h2database/releases/download/version-2.0.206/h2-2022-01-04.zip">Platform-Independent Zip</a></td>
+</tr>
+<tr><td>2.0.204</td>
+<td><a href="https://github.com/h2database/h2database/releases/download/version-2.0.204/h2-setup-2021-12-21.exe">Windows Installer</a></td>
+<td><a href="https://github.com/h2database/h2database/releases/download/version-2.0.204/h2-2021-12-21.zip">Platform-Independent Zip</a></td>
+</tr>
 <tr><td>1.4.202</td>
 <td><a href="https://github.com/h2database/h2database/releases/download/version-2.0.202/h2-setup-2021-11-25.exe">Windows Installer</a></td>
 <td><a href="https://github.com/h2database/h2database/releases/download/version-2.0.202/h2-2021-11-25.zip">Platform-Independent Zip</a></td>
