Fix ALTER TABLE ADD for identity and generated columns

--- a/h2/src/docsrc/html/changelog.html
+++ b/h2/src/docsrc/html/changelog.html
@@ -21,6 +21,8 @@ Change Log
 
 <h2>Next Version (unreleased)</h2>
 <ul>
+<li>Issue #3321: Insert Primary Key after import CSV Data does not work
+</li>
 <li>PR #3323: Tokenize SQL before parsing and preserve tokens for recompilation
 </li>
 <li>PR #3320: Add Servlet 5-compatible servlet for H2 Console
