--- a/h2/src/docsrc/html/changelog.html
+++ b/h2/src/docsrc/html/changelog.html
@@ -21,6 +21,8 @@ Change Log
 
 <h2>Next Version (unreleased)</h2>
 <ul>
+<li>Issue #3336: FT_INIT error when mode=MySQL
+</li>
 <li>Issue #3334: Regression with CREATE ALIAS - Parameter "#2" is not set
 </li>
 <li>Issue #3321: Insert Primary Key after import CSV Data does not work
