Return DatabaseMetaData.tableIndexOther for regular indexes

--- a/h2/src/docsrc/html/changelog.html
+++ b/h2/src/docsrc/html/changelog.html
@@ -21,6 +21,8 @@ Change Log
 
 <h2>Next Version (unreleased)</h2>
 <ul>
+<li>Issue #3340: JDBC index type seems wrong
+</li>
 <li>Issue #3336: FT_INIT error when mode=MySQL
 </li>
 <li>Issue #3334: Regression with CREATE ALIAS - Parameter "#2" is not set
