Replace BUILD_ID_STABLE and related link with link to latest release in previous series

--- a/h2/src/docsrc/html/download.html
+++ b/h2/src/docsrc/html/download.html
@@ -27,10 +27,12 @@ Downloads
 <!-- sha1Zip --><br />
 </p>
 
-<h3>Version ${stableVersion} (${stableVersionDate}), Last Stable</h3>
+<h3>Version 2.0.206 (2022-01-04)</h3>
 <p>
-<a href="https://h2database.com/h2-setup-${stableVersionDate}.exe">Windows Installer</a><br />
-<a href="https://h2database.com/h2-${stableVersionDate}.zip">Platform-Independent Zip</a><br />
+<a href="https://github.com/h2database/h2database/releases/download/version-2.0.206/h2-setup-2022-01-04.exe">Windows Installer</a>
+(SHA1 checksum: 982dff9c88412b00b3ced52b6870753e0133be07)<br />
+<a href="https://github.com/h2database/h2database/releases/download/version-2.0.206/h2-2022-01-04.zip">Platform-Independent Zip</a>
+(SHA1 checksum: 85d6d8f552661c2f8e1b86c10a12ab4bb6b0d29b)<br />
 </p>
 
 <h3>Archive Downloads</h3>
