Update changelog and fix building of documentation
(cherry picked from commit ca80ff0c021ff2d69d09d575e165dc5c36341728)

--- a/h2/src/docsrc/html/migration-to-v2.html
+++ b/h2/src/docsrc/html/migration-to-v2.html
@@ -82,10 +82,10 @@ Migrating an old database to the new version works most of the times. However, t
 
 <ul>
 <li>Restricted maximum allowed length limits: there are new length limits for for non-LOB data types. For example, for the VARBINARY type the maximum allowed size is now 1048576 instead of the previous 2^31-1. Adjust the tables before migration.
-</li><li>Oracle-style units were never supported officially without being in Oracle compatibility mode, altough some worked before. For example, the length of the VARCHAR datatype cannot be more specified using CHAR but CHARACTERS or OCTETS. CHAR and BYTE need to be used in Oracle compatibility mode.
+</li><li>Oracle-style units were never supported officially without being in Oracle compatibility mode, although some worked before. For example, the length of the VARCHAR datatype cannot be more specified using CHAR but CHARACTERS or OCTETS. CHAR and BYTE need to be used in Oracle compatibility mode.
 </li><li>IDENTITY syntax changed when type is specified: if the type for IDENTITY is specified, then the clause needs to be expanded as INTEGER GENERATED ALWAYS AS IDENTITY. Using just INTEGER IDENTITY is no more working.
 </li><li>IDENTITY() and SCOPE_IDENTITY() functions are removed: statements like CALL IDENTITY(); aren't working anymore. Use data change delta tables or Statement.getGeneratedKeys() instead.
-<li>LOG connection setting removed: PageStore was removed from H2 so the "LOG=0" setting at the end of the URL (like
+</li><li>LOG connection setting removed: PageStore was removed from H2 so the "LOG=0" setting at the end of the URL (like
 "jdbc:h2:file:/tmp/test;LOG=0") is no longer available.
 </li></ul>
 
