--- a/h2/src/docsrc/html/changelog.html
+++ b/h2/src/docsrc/html/changelog.html
@@ -21,6 +21,10 @@ Change Log
 
 <h2>Next Version (unreleased)</h2>
 <ul>
+<li>Issue #3376: Data cannot be read after insert of clob data > MAX_LENGTH_INPLACE_LOB with data change delta table
+</li>
+<li>PR #3377: Add -webExternalNames setting and fix WebServer.getConnection()
+</li>
 <li>PR #3367: Use faster checks of dimension systems of geometries
 </li>
 <li>PR #3369: Added v2 changes in migration docs
