--- a/h2/src/docsrc/html/changelog.html
+++ b/h2/src/docsrc/html/changelog.html
@@ -21,6 +21,8 @@ Change Log
 
 <h2>Next Version (unreleased)</h2>
 <ul>
+<li>PR #3381: Add IDENTITY() and SCOPE_IDENTITY() to LEGACY mode
+</li>
 <li>Issue #3376: Data cannot be read after insert of clob data > MAX_LENGTH_INPLACE_LOB with data change delta table
 </li>
 <li>PR #3377: Add -webExternalNames setting and fix WebServer.getConnection()
