--- a/h2/src/docsrc/html/features.html
+++ b/h2/src/docsrc/html/features.html
@@ -883,7 +883,7 @@ It means a NULL value may be specified for this column in INSERT command and it 
 </li><li>Attempt to reference a non-unique set of columns from a referential constraint
 will create an UNIQUE constraint on them automatically.
 </li><li>Unsafe comparison operators between numeric and boolean values are allowed.
-</li><li>IDENTITY() and SCOPE_IDENTIY() are supported, but both are implemented like SCOPE_IDENTITY()
+</li><li>IDENTITY() and SCOPE_IDENTITY() are supported, but both are implemented like SCOPE_IDENTITY()
 </li></ul>
 
 <h3>DB2 Compatibility Mode</h3>
