--- a/h2/src/docsrc/html/download-archive.html
+++ b/h2/src/docsrc/html/download-archive.html
@@ -28,6 +28,10 @@ Archive Downloads
 
 <table>
 <tbody>
+<tr><td>2.1.210</td>
+<td><a href="https://github.com/h2database/h2database/releases/download/version-2.1.210/h2-setup-2022-01-16.exe">Windows Installer</a></td>
+<td><a href="https://github.com/h2database/h2database/releases/download/version-2.1.210/h2-2022-01-16.zip">Platform-Independent Zip</a></td>
+</tr>
 <tr><td>2.0.206</td>
 <td><a href="https://github.com/h2database/h2database/releases/download/version-2.0.206/h2-setup-2022-01-04.exe">Windows Installer</a></td>
 <td><a href="https://github.com/h2database/h2database/releases/download/version-2.0.206/h2-2022-01-04.zip">Platform-Independent Zip</a></td>
