Use secure parser in H2AuthConfigXml to avoid future reports

--- a/h2/src/docsrc/html/changelog.html
+++ b/h2/src/docsrc/html/changelog.html
@@ -21,7 +21,7 @@ Change Log
 
 <h2>Next Version (unreleased)</h2>
 <ul>
-<li>Nothing yet...
+<li>PR #3382: Use secure parser in H2AuthConfigXml to avoid future reports
 </li>
 </ul>
 
