--- a/h2/src/docsrc/html/changelog.html
+++ b/h2/src/docsrc/html/changelog.html
@@ -21,6 +21,8 @@ Change Log
 
 <h2>Next Version (unreleased)</h2>
 <ul>
+<li>Issue #3400: Regression: ORDER BY ROWNUM fails with General error: "Unexpected code path"
+</li>
 <li>Issue #3387: SYSDATE behavior changed in 2.x
 </li>
 <li>Issue #3394: SYSDATE Considered Identifier when used in inner select
