Don't delete target non-regular files in SCRIPT TO

--- a/h2/src/docsrc/html/changelog.html
+++ b/h2/src/docsrc/html/changelog.html
@@ -21,6 +21,10 @@ Change Log
 
 <h2>Next Version (unreleased)</h2>
 <ul>
+<li>Issue #3405: Enhance SCRIPT to support operations on STDOUT
+</li>
+<li>Issue #3406 / PR #3407: FunctionMultiReturn.polar2CartesianArray result set iteration throws ClassCastException
+</li>
 <li>Issue #3400: Regression: ORDER BY ROWNUM fails with General error: "Unexpected code path"
 </li>
 <li>Issue #3387: SYSDATE behavior changed in 2.x
