--- a/h2/src/docsrc/html/changelog.html
+++ b/h2/src/docsrc/html/changelog.html
@@ -21,6 +21,8 @@ Change Log
 
 <h2>Next Version (unreleased)</h2>
 <ul>
+<li>Issue #3413: Parser can't parse REFERENCES … NOT NULL
+</li>
 <li>Issue #3410: OOME with nested derived tables
 </li>
 <li>Issue #3405: Enhance SCRIPT to support operations on STDOUT
