--- a/h2/src/docsrc/html/changelog.html
+++ b/h2/src/docsrc/html/changelog.html
@@ -21,6 +21,9 @@ Change Log
 
 <h2>Next Version (unreleased)</h2>
 <ul>
+<li>Issue #3414: H2 2.1.210: Query with Parameters throws NPE at
+org.h2.command.query.Query.getParameterValues(Query.java:449)
+</li>
 <li>Issue #3413: Parser can't parse REFERENCES … NOT NULL
 </li>
 <li>Issue #3410: OOME with nested derived tables
