Allow BIT(1) again in MySQL and MariaDB compatibility modes

--- a/h2/src/docsrc/html/changelog.html
+++ b/h2/src/docsrc/html/changelog.html
@@ -21,6 +21,10 @@ Change Log
 
 <h2>Next Version (unreleased)</h2>
 <ul>
+<li>Issue #3426: Regression: BIT(1) is not accepted in MySQL compatibility mode
+</li>
+<li>PR #3422: Allow combination of any geometry types with the same SRID
+</li>
 <li>Issue #3414: H2 2.1.210: Query with Parameters throws NPE at
 org.h2.command.query.Query.getParameterValues(Query.java:449)
 </li>
