--- a/h2/src/docsrc/html/changelog.html
+++ b/h2/src/docsrc/html/changelog.html
@@ -21,6 +21,8 @@ Change Log
 
 <h2>Next Version (unreleased)</h2>
 <ul>
+<li>Issue #1808: Occasional NPE in concurrent update of LOB
+</li>
 <li>Issue #3439: Cannot use enum values in JSON without explicit casts
 </li>
 <li>Issue #3426: Regression: BIT(1) is not accepted in MySQL compatibility mode
