#3457 increase max length of VAR* types

--- a/h2/src/docsrc/html/advanced.html
+++ b/h2/src/docsrc/html/advanced.html
@@ -1813,9 +1813,9 @@ This database has the following known limitations:
 The actual possible number can be smaller if their definitions are too long.
 </li><li>The maximum length of an identifier (table name, column name, and so on) is 256 characters.
 </li><li>The maximum length of CHARACTER, CHARACTER VARYING and VARCHAR_IGNORECASE values and columns
-is 1048576 characters.
+is 1_000_000_000 characters.
 </li><li>The maximum length of BINARY, BINARY VARYING, JAVA_OBJECT, GEOMETRY, and JSON values and columns
-is 1048576 bytes.
+is 1_000_000_000 bytes.
 </li><li>The maximum precision of NUMERIC and DECFLOAT values and columns is 100000.
 </li><li>The maximum length of an ENUM value is 1048576 characters, the maximum number of ENUM values is 65536.
 </li><li>The maximum cardinality of an ARRAY value or column is 65536.
