--- a/h2/src/docsrc/html/migration-to-v2.html
+++ b/h2/src/docsrc/html/migration-to-v2.html
@@ -76,7 +76,7 @@ for the purposes of improving crash safety and also read/write performance.
 <p>
 The maximum length of <a href="https://h2database.com/html/datatypes.html#character_type">CHARACTER</a>
 and <a href="https://h2database.com/html/datatypes.html#character_varying_type">CHARACTER VARYING</a> data types
-is n 1,048,576 characters. For larger values use
+is 1_000_000_000 characters. For larger values use
 <a href="https://h2database.com/html/datatypes.html#character_large_object_type">CHARACTER LARGE OBJECT</a>.
 </p>
 
@@ -84,7 +84,7 @@ is n 1,048,576 characters. For larger values use
 <a href="https://h2database.com/html/datatypes.html#binary_type">BINARY</a>
 and <a href="https://h2database.com/html/datatypes.html#binary_varying_type">BINARY VARYING</a>
 are now different data types. BINARY means fixed-length data type and its default length is 1.
-The maximum length of binary strings is 1,048,576 bytes. For larger values use
+The maximum length of binary strings is 1_000_000_000 bytes. For larger values use
 <a href="https://h2database.com/html/datatypes.html#binary_large_object_type">BINARY LARGE OBJECT</a>
 </p>
 
