Fix building of documentation

--- a/h2/src/docsrc/html/changelog.html
+++ b/h2/src/docsrc/html/changelog.html
@@ -32,7 +32,7 @@ Change Log
 <li>Issue #3414: H2 2.1.210: Query with Parameters throws NPE at
 org.h2.command.query.Query.getParameterValues(Query.java:449)
 </li>
-<li>Issue #3413: Parser can't parse REFERENCES … NOT NULL
+<li>Issue #3413: Parser can't parse REFERENCES &#8230; NOT NULL
 </li>
 <li>Issue #3410: OOME with nested derived tables
 </li>
