--- a/h2/src/docsrc/html/changelog.html
+++ b/h2/src/docsrc/html/changelog.html
@@ -21,6 +21,18 @@ Change Log
 
 <h2>Next Version (unreleased)</h2>
 <ul>
+<li>PR #3481: Add support for standard interval literals with precision
+</li>
+<li>Issue #3471: TRUNCATE TABLE seems to corrupt the Database file only after SHUTDOWN DEFRAG
+</li>
+<li>Issue #3473: Possible memory leak in 2.1.210
+</li>
+<li>PR #3464 / Issue #3457: increase max length of VAR* types
+</li>
+<li>PR #3460: fix bug in readStoreHeader()
+</li>
+<li>PR #3458: Add performance tests for SQLite
+</li>
 <li>Issue #1808: Occasional NPE in concurrent update of LOB
 </li>
 <li>Issue #3439: Cannot use enum values in JSON without explicit casts
