Pre-release changes for 2.1.212

--- a/h2/src/docsrc/html/changelog.html
+++ b/h2/src/docsrc/html/changelog.html
@@ -47,8 +47,7 @@ Change Log
 </li>
 <li>PR #3422: Allow combination of any geometry types with the same SRID
 </li>
-<li>Issue #3414: H2 2.1.210: Query with Parameters throws NPE at
-org.h2.command.query.Query.getParameterValues(Query.java:449)
+<li>Issue #3414: H2 2.1.210: Query with Parameters throws NPE
 </li>
 <li>Issue #3413: Parser can&apos;t parse REFERENCES &hellip; NOT NULL
 </li>
