--- a/h2/src/docsrc/html/changelog.html
+++ b/h2/src/docsrc/html/changelog.html
@@ -21,7 +21,11 @@ Change Log
 
 <h2>Next Version (unreleased)</h2>
 <ul>
-<li>Nothing yet ...
+<li>Issue #3493: org.h2.tools.DeleteDbFiles won't delete files under certain circumstances
+</li>
+<li>Issue #3486: FilePathDisk.newDirectoryStream() may fail on remote drive on Windows due to AccessDeniedException in Path.toRealPath()
+</li>
+<li>Issue #3484: LOB issue
 </li>
 </ul>
 
