Fix BITNOT(BIT_..._AGG(...) FILTER(...) OVER(...)) optimization

--- a/h2/src/docsrc/html/changelog.html
+++ b/h2/src/docsrc/html/changelog.html
@@ -33,6 +33,12 @@ Change Log
 
 <h2>Next Version  2.1.212 (2022-04-09)</h2>
 <ul>
+<li>Issue #3512: BITNOT(BIT_NAND_AGG(...) OVER ()) produces wrong result
+</li>
+<li>Issue #3510: PreparedStatement execution with java.io.tmpdir pointing to a directory symlink results in FileAlreadyExistsException
+</li>
+<li>PR #3504: Fix TypeInfo.getHigherGeometry() for types with and without SRID
+</li>
 <li>PR #3481: Add support for standard interval literals with precision
 </li>
 <li>Issue #3471: Possibility of corruption after SHUTDOWN DEFRAG
