--- a/h2/src/docsrc/html/changelog.html
+++ b/h2/src/docsrc/html/changelog.html
@@ -21,6 +21,8 @@ Change Log
 
 <h2>Next Version (unreleased)</h2>
 <ul>
+<li>Issue #3515: Support for NEXTVAL property in DB2 mode
+</li>
 <li>Issue #3444: Conversion 'text' to 'integer' doesn't work anymore
 </li>
 <li>Issue #3493: org.h2.tools.DeleteDbFiles won't delete files under certain circumstances
