--- a/h2/src/docsrc/html/features.html
+++ b/h2/src/docsrc/html/features.html
@@ -899,6 +899,7 @@ or the SQL statement <code>SET MODE DB2</code>.
 </li><li>Timestamps with dash between date and time are supported.
 </li><li>Datetime value functions return the same value within a command.
 </li><li>Second and third arguments of TRANSLATE() function are swapped.
+</li><li>SEQUENCE.NEXTVAL and SEQUENCE.CURRVAL are supported
 </li><li>LIMIT / OFFSET clauses are supported.
 </li><li>MINUS can be used instead of EXCEPT.
 </li><li>Unsafe comparison operators between numeric and boolean values are allowed.
