--- a/h2/src/docsrc/html/changelog.html
+++ b/h2/src/docsrc/html/changelog.html
@@ -21,6 +21,8 @@ Change Log
 
 <h2>Next Version (unreleased)</h2>
 <ul>
+<li>Issue #3528: Weird syntax error with HAVING clause in Oracle Mode
+</li>
 <li>Issue #3307: Fix SHUTDOWN DEFRAG for encrypted databases
 </li>
 <li>Issue #3515: Support for NEXTVAL property in DB2 mode
