Improve support for ROW in NON_KEYWORDS list

--- a/h2/src/docsrc/html/changelog.html
+++ b/h2/src/docsrc/html/changelog.html
@@ -21,6 +21,8 @@ Change Log
 
 <h2>Next Version (unreleased)</h2>
 <ul>
+<li>Issue #3390: "ROW" cannot be set as a non keyword in 2.x
+</li>
 <li>Issue #3448: With linked table to postgreSQL, case-sensitive column names not respected in where part
 </li>
 <li>Issue #3434: JavaTableFunction is not closing underlying ResultSet when reading column list
