--- a/h2/src/docsrc/html/changelog.html
+++ b/h2/src/docsrc/html/changelog.html
@@ -21,6 +21,8 @@ Change Log
 
 <h2>Next Version (unreleased)</h2>
 <ul>
+<li>Issue #3538: In Postgres compatibility mode the NUMERIC type w/o scale should not default to 0
+</li>
 <li>Issue #3534: Subquery has incorrect empty parameters since 2.1.210 that breaks sameResultAsLast()
 </li>
 <li>Issue #3390: "ROW" cannot be set as a non keyword in 2.x
