Improve support of UPDATE with FROM in PostgreSQL compatibility mode

--- a/h2/src/docsrc/html/changelog.html
+++ b/h2/src/docsrc/html/changelog.html
@@ -21,7 +21,10 @@ Change Log
 
 <h2>Next Version (unreleased)</h2>
 <ul>
-    <li>Nothing yet</li>
+<li>Issue #3543: PostgreSQL mode, update with "from", why "NULL not allowed" error?
+</li>
+<li>PR #3542: Fix failed to delete a readonly file on Windows file systems
+</li>
 </ul>
 
 <h2>Version  2.1.214 (2022-06-13)</h2>
