--- a/h2/src/docsrc/html/features.html
+++ b/h2/src/docsrc/html/features.html
@@ -1094,7 +1094,7 @@ Do not change value of DATABASE_TO_LOWER after creation of database.
 </li><li>Datetime value functions return the same value within a transaction.
 </li><li>ARRAY_SLICE() out of bounds parameters are silently corrected.
 </li><li>EXTRACT function with DOW field returns (0-6), Sunday is 0.
-</li><li>UPDATE with FROM is supported.
+</li><li>UPDATE with FROM is partially supported.
 </li><li>GROUP BY clause can contain 1-based positions of expressions from the SELECT list.
 </li></ul>
 
