Return AUTO_INCREMENT=TRUE from getTypeInfo() for numeric data types

--- a/h2/src/docsrc/html/changelog.html
+++ b/h2/src/docsrc/html/changelog.html
@@ -21,6 +21,10 @@ Change Log
 
 <h2>Next Version (unreleased)</h2>
 <ul>
+<li>Issue #3567: No AUTO_INCREMENT in DatabaseMetaData.getTypeInfo()
+</li>
+<li>PR #3555: Add missing check for -webExternalNames flag
+</li>
 <li>Issue #3543: PostgreSQL mode, update with "from", why "NULL not allowed" error?
 </li>
 <li>PR #3542: Fix failed to delete a readonly file on Windows file systems
