Use file system abstraction layer in FileLock.aggressiveLastModified()

--- a/h2/src/docsrc/html/changelog.html
+++ b/h2/src/docsrc/html/changelog.html
@@ -21,6 +21,10 @@ Change Log
 
 <h2>Next Version (unreleased)</h2>
 <ul>
+<li>Issue #3601: InvalidPathException when saving lock file
+</li>
+<li>Issue #3583: lob cleaner issue
+</li>
 <li>Issue #3585: Misuse ValueReal.DECIMAL_PRECISION when optimize typeinfo from DOUBLE to DECFLOAT
 </li>
 <li>Issue #3575: Possible syntax mismatch for json_object in MySQL compatibility mode
