Fix LISTAGG with separator passed as parameter

--- a/h2/src/docsrc/html/changelog.html
+++ b/h2/src/docsrc/html/changelog.html
@@ -21,6 +21,8 @@ Change Log
 
 <h2>Next Version (unreleased)</h2>
 <ul>
+<li>Issue #3619: PostgreSQL mode: STRING_AGG with prepared statement parameter not working
+</li>
 <li>Issue #3615: H2 Console connecting to Oracle DB will not show the list of tables
 </li>
 <li>PR #3613: Fix infinite loop in Tokenizer when special whitespace character is used
