Always return upper-case SOUNDEX

--- a/h2/src/docsrc/html/changelog.html
+++ b/h2/src/docsrc/html/changelog.html
@@ -21,6 +21,14 @@ Change Log
 
 <h2>Next Version (unreleased)</h2>
 <ul>
+<li>Issue #3640: SOUNDEX function should not be case-sensitive
+</li>
+<li>Issue #3633: Memory leak in case of in-memory database
+</li>
+<li>PR #3629 Better separation between MVStore and FileStore
+</li>
+<li>PR #3626: Improve memory estimation of CacheLongKeyLIRS and correct some passed memory sizes
+</li>
 <li>Issue #3619: PostgreSQL mode: STRING_AGG with prepared statement parameter not working
 </li>
 <li>Issue #3615: H2 Console connecting to Oracle DB will not show the list of tables
